# interview-tasks

./: .gitignore  README.md
brackets/: Cargo.toml  README.md  default.nix
brackets-parser/: Cargo.toml  README.md
brackets-parser/src/: lib.rs
brackets/src/: lib.rs  v1_recursive.rs  v2_stack.rs
crawler/: Cargo.toml  README.md  default.nix
crawler/src/: better.rs  lib.rs  simple.rs  v3_better.rs  v4_tokio_wrong.rs  v5_tokio_better.rs
crawler/src/common/: error.rs  mod.rs  rasync.rs  sync.rs
crawler/src/mock/: hashmap.rs  mod.rs  slowed_async.rs  slowed_sync.rs
fizzbuzz/: Cargo.toml  Makefile  README.md  default.nix
fizzbuzz/src/: lib.rs  v1_stupid.rs  v2_slightly_optimized.rs  v3_iterator.rs  v4_lazy_btree.rs  v5_multithreaded.rs
price_match/: Makefile  README.md
price_match/src/: lib.rs  v1_baseline.rs
