[package]
name = "crawler"
version = "0.1.0"
authors = ["Sergey Mishin <sergei.a.mishin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
deadqueue = "0.2.0"

log = "0.4.0"
env_logger = "0.9.0"
tracing = "0.1.29"
test-log = { version = "0.2.8", features = ["log", "trace"] }
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}

reqwest = { version = "0.11.6", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# [dev-dependencies]
# env_logger = "*"
# tracing = {version = "0.2.8", default-features = false}
# tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}


